Some Clean Up to make the gitignore better